paper_experimental_results/2026-05-06T18-03-03/grok-code-fast-1/declarations/structure_and_union_spec_3/sample_004/target.compile.log
warning: unused import: `std::ptr`
 --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/declarations/structure_and_union_spec_3/sample_004/target.rs:3:5
  |
3 | use std::ptr;
  |     ^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

error: usage of an `unsafe` block
  --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/declarations/structure_and_union_spec_3/sample_004/target.rs:24:15
   |
24 |     let ptr = unsafe { alloc(layout) };
   |               ^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: requested on the command line with `-F unsafe-code`

error: usage of an `unsafe` block
  --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/declarations/structure_and_union_spec_3/sample_004/target.rs:29:13
   |
29 |     let p = unsafe { &mut *(ptr as *mut S) };
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: usage of an `unsafe` block
  --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/declarations/structure_and_union_spec_3/sample_004/target.rs:32:17
   |
32 |     let a_ptr = unsafe { ptr.add(mem::size_of::<S>()) as *mut i32 };
   |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: usage of an `unsafe` block
  --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/declarations/structure_and_union_spec_3/sample_004/target.rs:33:5
   |
33 | /     unsafe {
34 | |         *a_ptr.add(0) = 11;
35 | |         *a_ptr.add(3) = 22;
36 | |     }
   | |_____^

error: usage of an `unsafe` block
  --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/declarations/structure_and_union_spec_3/sample_004/target.rs:38:20
   |
38 |     if p.i != 7 || unsafe { *a_ptr.add(0) } != 11 || unsafe { *a_ptr.add(3) } != 22 {
   |                    ^^^^^^^^^^^^^^^^^^^^^^^^

error: usage of an `unsafe` block
  --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/declarations/structure_and_union_spec_3/sample_004/target.rs:38:54
   |
38 |     if p.i != 7 || unsafe { *a_ptr.add(0) } != 11 || unsafe { *a_ptr.add(3) } != 22 {
   |                                                      ^^^^^^^^^^^^^^^^^^^^^^^^

error: usage of an `unsafe` block
  --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/declarations/structure_and_union_spec_3/sample_004/target.rs:39:9
   |
39 |         unsafe { dealloc(ptr, layout) };
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: usage of an `unsafe` block
  --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/declarations/structure_and_union_spec_3/sample_004/target.rs:43:5
   |
43 |     unsafe { dealloc(ptr, layout) };
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0277]: `main` has invalid return type `i32`
  --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/declarations/structure_and_union_spec_3/sample_004/target.rs:11:14
   |
11 | fn main() -> i32 {
   |              ^^^ `main` can only return types that implement `Termination`
   |
   = help: consider using `()`, or a `Result`

error: aborting due to 9 previous errors; 1 warning emitted

For more information about this error, try `rustc --explain E0277`.